# ros_kortex

kortex_api/: CMakeLists.txt  package.xml
kortex_description/arms/gen3/7dof/urdf/: gen3.urdf  gen3_macro.xacro  gen3_noros.urdf
kortex_description/robots/: gen3.xacro  gen3_robotiq_2f_85.xacro  kortex_robot.xacro
kortex_driver/: CMakeLists.txt  arm_pid.yaml  config.rviz  joint_limits.yaml  joint_zeros.yaml  package.xml  pd_gains.yaml
kortex_driver/include/kortex_driver/non-generated/: hardware_interface.h  kortex_arm_driver.h  kortex_command_interface.h  kortex_subscribers.h  pre_computed_joint_trajectory_action_server.h  robotiq_gripper_command_action_server.h
kortex_driver/launch/: kortex_driver.launch  kortex_driver_ros_control.launch
kortex_driver/src/non-generated/: ros_control.cpp
kortex_driver/src/non-generated/driver/: hardware_interface.cpp  kortex_arm_driver.cpp  kortex_arm_simulation.cpp  pre_computed_joint_trajectory_action_server.cpp
kortex_gazebo/: CMakeLists.txt
kortex_move_it_config/gen3_move_it_config/config/7dof/: default_joint_limits.yaml  gen3.srdf.xacro  hard_joint_limits.yaml  ros_controllers.yaml
kortex_move_it_config/gen3_robotiq_2f_85_move_it_config/config/7dof/: gen3_robotiq_2f_85.srdf.xacro  ros_controllers.yaml
