<?xml version="1.0"?>
<package format="2">
  <name>kortex_driver</name>
  <version>2.2.2</version>
  <description>The package that acts as a robot's driver. Supports simulated and real Kortex robots.</description>

  <author email="hlamontagne@kinova.ca">Hugo Lamontagne</author>
  <author email="avannobel@kinova.ca">Alexandre Vannobel</author>
  <maintainer email="avannobel@kinova.ca" />

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>kortex_api</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>control_msgs</depend>
  <depend>controller_manager_msgs</depend>
  <depend>hardware_interface</depend>
  <depend>angles</depend>
  <depend>actionlib</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>kdl_parser</depend>
  <depend>message_generation</depend>
  <depend>urdf</depend>
  <depend>controller_manager</depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>control_toolbox</depend>
  <depend>std_srvs</depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
